samples/_failures_safe/1761241906_9c0fe3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c75c30b0.c: In function ‘main’:
./samples/SAFE/__tmp_c75c30b0.c:157:16: error: missing terminating " character
  157 |         printf("\
      |                ^~
./samples/SAFE/__tmp_c75c30b0.c:157:9: error: expected expression at end of input
  157 |         printf("\
      |         ^~~~~~
./samples/SAFE/__tmp_c75c30b0.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c75c30b0.c:157:9: error: expected declaration or statement at end of input
